--- a/AxelArcidiaco - Monitoring Workshop.ipynb
+++ b/AxelArcidiaco - Monitoring Workshop.ipynb
@@ -10,8 +10,7 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn import datasets\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier, BaggingClassifier\n",
-    "from sklearn.neighbors import KNeighborsclassifier_best_params\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "from sklearn.model_selection import learning_curve, cross_val_score\n",
